--- a/docs/style.css
+++ b/docs/style.css
@@ -13,4 +13,36 @@
     background-position: center;
     background-size: cover;
     padding: 0 8%;
+    position: relative;
+}
+.content{
+    top: 50%;
+    position: absolute;
+    transform: translateY(-50%);
+    color: #fff;
+}
+.content h1{
+    font-size: 64px;
+    font-weight: 600;
+}
+
+.content h1 span{
+    color: #fff375;
+}
+
+.content h3{
+    font-size: 45px;
+    font-weight: 450;
+}
+
+.content button{
+    background: transparent;
+    border: 2px solid #fff;
+    outline: none;
+    padding: 12px 25px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+    cursor: pointer;
 }
