--- a/docs/style.css
+++ b/docs/style.css
@@ -1,48 +1,44 @@
-*
-{
+/* GENERAL */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+*{
     margin: 0;
     padding: 0;
-    font-family: 'poppins', 'sans-serif';
-    box-sizing: border-box;
 }
 
-.container{
-    width: 100vw;
-    height: 100vh;
-    background-image: url(images/outer-space-background.jpg);
-    background-position: center;
-    background-size: cover;
-    padding: 0 8%;
-    position: relative;
-}
-.content{
-    top: 50%;
-    position: absolute;
-    transform: translateY(-50%);
-    color: #fff;
-}
-.content h1{
-    font-size: 64px;
-    font-weight: 600;
+body{
+    font-family: 'Poppins', sans-serif;
 }
 
-.content h1 span{
-    color: #fff375;
+html{
+    scroll-behavior: smooth;
 }
 
-.content h3{
-    font-size:35px;
-    font-weight: 450;
+p {
+    color: rgb(85, 85, 85);
 }
 
-.content button{
-    background: transparent;
-    border: 2px solid #fff;
-    outline: none;
-    padding: 12px 25px;
-    color: #fff;
+/* TRANSITION */
+
+a, .btn {
+    transition: all 300ms ease;
+}
+
+/* DESKTOP NAV */
+
+nav, .nav-links {
     display: flex;
+}
+
+nav {
+    justify-content: space-around;
     align-items: center;
-    margin-top: 30px;
-    cursor: pointer;
+    height: 17vh;
+}
+
+.nav-links {
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
 }
